# SLISP

./: LICENSE  README.md  evaluate.py  main.py  pyproject.toml  repl.py
lib/: math.slisp
src/: evaluate.py  evaluater.py  interpreter.py  lisp_parser.py  main.py  repl.py
test/: factorial.slisp  fizzbuzz.lisp  fizzbuzz.slisp  mathfun.slisp
