[build-systems]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slisp"
version = "0.1.0"
description = "An interpreter for SLISP language"
requires-python = ">=3.9"

[project.scripts]
slisp = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
